<resources>
    <string name="app_name">My BMI Calculator</string>
    <string name="last_calculated_date">Last Calculated Date:</string>
    <string name="last_calculated_bmi">Last Calculated BMI:</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="reset_data">RESET DATA</string>
    <string name="calculate">CALCULATE</string>
</resources>
