<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/weightEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"/>

    <EditText
        android:id="@+id/heightEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"/>

        <Button
            android:id="@+id/resetDataBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_data"/>

    </LinearLayout>

    <TextView
        android:id="@+id/lastCalcDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_calculated_date"/>

    <TextView
        android:id="@+id/lastCalcBMITv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_calculated_bmi"/>

    <TextView
        android:id="@+id/outcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>